[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sniffer"
version = "0.4.1"
description = "An automatic test runner. Supports nose out of the box."
readme = "README.rst"
authors = [{ name = "Jeff Hui", email = "jeff@jeffhui.net" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
requires-python = ">=3.6"
dependencies = ["colorama", "python-termstyle", "pynose"]

[project.optional-dependencies]
LibNotify = ["py-notify==0.3.1"]
OSX = ["MacFSEvents==0.8.4"]

[project.scripts]
sniffer = "sniffer:main"

[project.urls]
Homepage = "http://github.com/jeffh/sniffer/"
